fix shape out of bounds in shape container

--- a/src/app/shared/components/shape-container/shape-container.component.css
+++ b/src/app/shared/components/shape-container/shape-container.component.css
@@ -19,6 +19,7 @@
         width: inherit;
         height: inherit;
         position: absolute;
+        inset: 0;
         z-index: inherit;
       }
     }
